<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="menu_exit">Exit</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_save_state">Save State</string>
    <string name="menu_load_state">Load State</string>
    <string name="menu_save_state_cloud">Save State to Cloud</string>
    <string name="menu_load_state_cloud">Load State from Cloud</string>
    <string name="load_game">Load Game</string>
    <string name="setting">Settings</string>
    <string name="choose_bios">Choose bios</string>
    <string name="choose_cartridge">Choose cartridge</string>
    <string name="choose_cpu_core">Choose Cpu Core</string>
    <string name="choose_video_core">Choose Video Core</string>
    <string name="audio_output">Audio output</string>
    <string name="fps">FPS</string>
    <string name="lock_landscape">Lock Landscape Mode</string>
    <string name="frameskip">Frameskip</string>
    <string name="keepaspectrate">Keep original aspect rate</string>
    <string name="choose_input_device">Choose input Device</string>
    <string name="input_device_title">Player1 Input Device</string>
    <string name="input_device_title_player2">Player2 Input Device</string>
    <string name="input_device">Choose</string>
    <string name="input_device_setting">Edit Key Map</string>
    <string name="onscrenn_pad_setting">Edit OnScreen Pad</string>
    <string name="nopad">None</string>
    <string name="bios">Bios</string>
    <string name="cartridge">Cartridge</string>
    <string name="cpu_core">Cpu Core</string>
    <string name="video_core">Video Core</string>
    <string name="setting_sound">Sound</string>
    <string name="setting_graphics">Graphics</string>
    <string name="setting_general">General</string>
    <string name="msg_opengl_not_supported">Your device is not support OpenGL ES 3.0 or above.\nYou can not choose OpenGL Video Interface.\n</string>
    <string name="skip">Skip</string>
    <string name="donation">Support</string>
    <string name="donate_message">
        Support our development! \n\n
        You can support the upstream project of Yaba Sanshiro by making a donation directly on their website http://yabause.org.
        You can also support this project Yaba Sanshiro by clicking the donate button below, this will help towards development of more accurate emulation, input devices and a wider range of devices.
        This screen and advertisement screen will not be shown, If you have donated.
    </string>
    <string name="thank_you">Thank you for your donation!</string>
    <string name="error_consume">Failed to consume.</string>
    <string name="do_donation">Donate</string>
    <string name="no_thank_you">No, Thank you.</string>
    <string name="donate_3doller">$3</string>
    <string name="donate_5doller">$5</string>
    <string name="donate_10doller">$10</string>
    <string name="donate_30doller">$30</string>
    <string name="input_the_key">Input the Key</string>
    <string name="joystick_is_not_connected">Joypad is not connected.</string>
    <string name="this_key_has_already_been_set">This Key has already been set.</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="axis_x">Analog X</string>
    <string name="axis_y">Analog Y</string>
    <string name="axis_l">Analog L Trigger</string>
    <string name="axis_r">Analog R Trigger</string>
    <string name="l_trigger">L Trigger</string>
    <string name="r_trigger">R Trigger</string>
    <string name="start">Start</string>
    <string name="a_button">A</string>
    <string name="b_button">B</string>
    <string name="c_button">C</string>
    <string name="x_button">X</string>
    <string name="y_button">Y</string>
    <string name="z_button">Z</string>
    <string name="menu">Menu</string>
    <string name="scale">Scale</string>
    <string name="transparency">Transparency</string>
    <string name="hitsize">Touch Area</string>
    <string name="analog_distance">Analog Range</string>
    <string name="classic_pad_style">Classic Pad Style</string>
    <string name="do_you_want_to_save_this_setting">Do you want to save this setting?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="ignore">Ignore</string>
    <string name="new_dynrec_cpu_interface">New Dynamic Recompiler(faster than Interpreter. more accurate than Old Dynamic Recompiler)</string>
    <string name="dynrec_cpu_interface">Old Dynamic Recompiler(fast but less accurate)</string>
    <string name="software_cpu_interface">Interpreter(slow but more accurate)</string>
    <string name="opengl_video_interface">OpenGL ES 3.1</string>
    <string name="software_video_interface">Software</string>
    <string name="vulkan_video_interface">Vulkan</string>
    <string name="onscreen_pad">On-Screen Pad</string>
    <string name="select_from_other_directory">Select from other directory.</string>
    <string name="menu_save_screenshot">ScreenShot</string>
    <string name="menu_report">Report</string>
    <string name="video_filter">Filter</string>
    <string name="choose_video_filter">Choose Video Filter</string>
    <string name="video_filter_none">None</string>
    <string name="video_filter_fxaa">FXAA</string>
    <string name="video_filter_scanline">Scanline</string>
    <string name="polygon_generation_type">Polygon Generation Type</string>
    <string name="choose_polygon_generation_type">Choose Polygon Generation type</string>
    <string name="sound_engine">Sound Engine</string>
    <string name="choose_sound_engine">Choose sound engine</string>
    <string name="video_resolution">Rendering Resolution</string>
    <string name="video_aspect_ratio">Aspect Ratio</string>
    <string name="rbg_resolution">RBG Resolution</string>
    <string name="choose_video_resolution">Choose rendering resolution</string>
    <string name="choose_video_aspect_ratio">Choose rendering aspect ratio</string>
    <string name="choose_rbg_resolution">Choose RBG(Rotate Background) Screen Resolution</string>
    <string name="str_use_compute_shader">Use Compute Shader</string>
    <string name="str_rotate_screen">90 degree rotation</string>
    <string name="scsp_sync">Scsp synchronization count per a frame(1 - 255)</string>
    <string name="time_synchronization_mode">Sound time synchronization mode</string>
    <string name="choose_time_synchronization_mode">Sound time synchronization mode</string>
    <string name="hide_status_bar_and_navigation_bar">Hide Status bar and Navigation bar</string>
    <string name="frameLimit">Speed Limit</string>
    <string name="chooseFrameLimit">Choose frame limit mode</string>
    <string name="use_cpu_affinity">
        Use CPU affinity
    </string>
    <string name="use_sh2_cache">
        Use SH2 cache
    </string>
    <string name="perf_use_cpu_affinity_detail">In the case of an asymmetric multi-core CPU, the higher clocked cores are preferentially utilized. However, depending on the device, there may be a decrease in performance in reverse.</string>
    <string name="pref_use_sh2_cache_detail">Enabling the emulation of SH2 cache processing improves compatibility. However, it comes at the cost of emulation speed.</string>
    <string name="pref_auto_state_save_title">Enable Auto State Save</string>
    <string name="retroachievements_username">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="ra_login_dialog_description">Enter your RetroAchievements credentials</string>
    <string name="ra_create_account_link">Don\'t have an account? Create one here</string>
    <string name="bios_type_builtin">Use Built-in BIOS</string>
    <string name="bios_type_file">Use External BIOS File</string>
    <string name="extended_memory_disabled_notice">Note: Extended backup memory (8MB) is not available when using external BIOS file.</string>
    <string name="bios_picker_title">BIOS Selection</string>
    <string name="available_bios_files">Available BIOS Files:</string>
    <string name="no_bios_files">No BIOS files added yet</string>
    <string name="add_bios_file">Add BIOS File</string>
    <string name="add_folder">Add Folder</string>
    <string name="scan_all">Scan All</string>
    <string name="nav_games">Games</string>
    <string name="nav_backup">Backup</string>
    <string name="nav_add">Add</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_account">Account</string>
    <string name="setting_display">Display</string>
    <string name="setting_rendering">Rendering</string>
    <string name="setting_performance">Performance</string>
    <string name="input_device_title_player1_controls">Player 1 Controls</string>
    <string name="input_device_title_player2_controls">Player 2 Controls</string>
    <string name="pref_bios_summary">Select the BIOS file used by the emulator</string>
    <string name="pref_cart_summary">Select expansion cartridge type</string>
    <string name="pref_cpu_summary">Select the CPU emulation engine</string>
    <string name="pref_auto_state_save_summary_on">State will be saved automatically on exit</string>
    <string name="pref_auto_state_save_summary_off">State will not be saved on exit</string>
    <string name="pref_resolution_summary">Set the rendering resolution</string>
    <string name="pref_aspect_rate_summary">Set the display aspect ratio</string>
    <string name="pref_rbg_resolution_summary">Set the rotating background screen resolution</string>
    <string name="pref_landscape_summary_on">Screen is locked to landscape orientation</string>
    <string name="pref_landscape_summary_off">Screen orientation follows device rotation</string>
    <string name="pref_rotate_screen_summary_on">Screen is rotated 90 degrees</string>
    <string name="pref_rotate_screen_summary_off">Screen uses normal orientation</string>
    <string name="pref_immersive_mode_summary_on">Status bar and navigation bar are hidden</string>
    <string name="pref_immersive_mode_summary_off">Status bar and navigation bar are visible</string>
    <string name="pref_video_summary">Select the graphics rendering engine</string>
    <string name="pref_filter_summary">Apply post-processing video filter</string>
    <string name="pref_polygon_generation_summary">Select polygon rendering method</string>
    <string name="pref_use_compute_shader_summary_on">Compute shader enabled for GPU acceleration</string>
    <string name="pref_use_compute_shader_summary_off">Compute shader disabled</string>
    <string name="pref_fps_summary_on">FPS counter is displayed on screen</string>
    <string name="pref_fps_summary_off">FPS counter is hidden</string>
    <string name="pref_frameskip_summary_on">Frames may be skipped for better performance</string>
    <string name="pref_frameskip_summary_off">All frames are rendered</string>
    <string name="pref_frameLimit_summary">Set the emulation speed limit</string>
    <string name="pref_input_device_summary">Select the input device for this player</string>
    <string name="pref_input_setting_summary">Configure button mapping for the selected device</string>
    <string name="pref_onscreen_pad_summary">Customize on-screen pad layout and sensitivity</string>
    <string name="pref_audio_summary_on">Audio output is enabled</string>
    <string name="pref_audio_summary_off">Audio output is muted</string>
    <string name="pref_sound_engine_summary">Select the sound emulation engine</string>
    <string name="pref_scsp_time_sync_summary">Select how sound timing is synchronized</string>
    <string name="pref_scsp_sync_per_frame_summary">Number of SCSP synchronization cycles per frame (1-255)</string>
</resources>