<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_games"
        android:icon="@drawable/ic_baseline_videogame_asset_24"
        android:title="@string/nav_games" />
    <item
        android:id="@+id/nav_backup"
        android:icon="@drawable/ic_backup"
        android:title="@string/nav_backup" />
    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/nav_add" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/baseline_settings_white_24"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_baseline_person_24px"
        android:title="@string/nav_account" />
</menu>
